sort files and add none textview if either there are no folders or no files in a certain directory

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">SlackOff</string>
     <string name="folder">Folders</string>
     <string name="file">Files</string>
+    <string name="none">None</string>
 
 </resources>
