--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="folder">Folders</string>
     <string name="file">Files</string>
     <string name="none">None</string>
+    <string name="no_activities">No apps found to open this file</string>
 
 </resources>
