work on the editing not activity and made file extension .klink a constant in utils

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,6 +28,7 @@
     <string name="error_creating_file">Error creating file</string>
     <string name="file_exists">File already exists!</string>
     <string name="add_new">Add New</string>
+    <string name="note_title">Add Title</string>
 
     <!-- OverNote Strings -->
     <string name="note_name_hint">Note Name…</string>
