wow, ton of work to schedule those, but it is done. we still will need to set up the alarms and stuff to bring up the service though.
Inside those alarms, we will also have to schedule the next instance of the class and update the times because i store them as long's so that we can use the dates to check what class is currently running when saving them from the overlay note

We may have to add another column to the sql table to set the alarm id, or we could just use the random id that the table generates when inserting the content.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -28,9 +28,12 @@
     <string name="error_creating_file">Error creating file</string>
     <string name="file_exists">File already exists!</string>
     <string name="add_new">Add New</string>
-    <string name="next_instance_of_class">Next Instance of the Class:</string>
+    <string name="next">Next</string>
+    <string name="next_instance_of_class">Next Date of the Class:</string>
     <string name="class_name">Class name...</string>
-    <string name="set_days">Set the days</string>
+    <string name="set_days">Set the days:</string>
+    <string name="start_time">Start Time:</string>
+    <string name="end_time">End Time:</string>
 
     <!-- Days of the Week -->
     <string name="sunday">Sunday</string>
