--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,6 +29,7 @@
     <string name="file_exists">File already exists!</string>
     <string name="add_new">Add New</string>
     <string name="note_title">Add Title</string>
+    <string name="checkable">Checkable</string>
 
     <!-- OverNote Strings -->
     <string name="note_name_hint">Note Name…</string>
