change the note footer on the list view

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,12 +30,14 @@
     <string name="add_new">Add New</string>
     <string name="next">Next</string>
     <string name="next_instance_of_class">Next Date of the Class:</string>
-    <string name="class_name">Class name...</string>
+    <string name="class_name">Class name…</string>
     <string name="set_days">Set the days:</string>
     <string name="start_time">Start Time:</string>
     <string name="end_time">End Time:</string>
     <string name="note_title">Add Title</string>
     <string name="checkable">Show Checkboxes</string>
+    <string name="new_line">New Line</string>
+    <string name="attach_picture">Attach Picture</string>
 
     <!-- Days of the Week -->
     <string name="sunday">Sunday</string>
