lots of fixes for the adapter, some funky stuff still goes on when scrolling through the list with the discard button that I cant figure out yet

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,6 +38,7 @@
     <string name="checkable">Show Checkboxes</string>
     <string name="new_line">New Line</string>
     <string name="attach_picture">Attach Picture</string>
+    <string name="type_here">Type Here…</string>
 
     <!-- Days of the Week -->
     <string name="sunday">Sunday</string>
